--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask==2.3.3
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==3.0.3
-Flask-Migrate==4.0.4
-email-validator==1.3.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-Werkzeug==2.3.7
-SQLAlchemy==2.0.19
+Flask
+Flask-Mail
+Flask-SQLAlchemy
+Flask-Migrate
+email-validator
+itsdangerous
+Jinja2
+MarkupSafe
+Werkzeug
+SQLAlchemy
+gunicorn
